--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -40,7 +40,7 @@
         <form action="/auth/signup" method="POST">
             <div class="input-box">
                 <input type="text" placeholder="Name" name="name" required>
-                <input type="text" placeholder="Phone Number xxx-xxx-xxxx" name="phone" required>
+                <!-- <input type="text" placeholder="Phone Number xxx-xxx-xxxx" name="phone" required> -->
             </div>
             <div class="input-box">
                 <input type="email" placeholder="Email" name="email">
