--- a/views/weapon.ejs
+++ b/views/weapon.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= weapon.displayProperties.name %> - Weapon Details</title>
+  <title><%= weapon.name %> - Weapon Details</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -38,23 +38,23 @@
   <div class="container mt-4">
     <div class="row">
       <div class="col-md-4">
-        <% if (weapon.displayProperties && weapon.displayProperties.icon) { %>
-          <img src="https://www.bungie.net<%= weapon.displayProperties.icon %>" class="weapon-icon-full" alt="<%= weapon.displayProperties.name %>">
+        <% if (weapon.icon) { %>
+          <img src="https://www.bungie.net<%= weapon.icon %>" class="weapon-icon-full" alt="<%= weapon.name %>">
         <% } %>
       </div>
       <div class="col-md-8">
-        <% if (weapon.displayProperties && weapon.displayProperties.name) { %>
-          <h1><%= weapon.displayProperties.name %></h1>
+        <% if (weapon.name) { %>
+          <h1><%= weapon.name %></h1>
         <% } %>
-        <% if (weapon.itemTypeDisplayName) { %>
-          <h2>Weapon Type: <%= weapon.itemTypeDisplayName %></h2>
+        <% if (weapon.weaponType) { %>
+          <h2>Weapon Type: <%= weapon.weaponType %></h2>
         <% } %>
         <p><strong>Ammo Type:</strong> 
-          <% if (weapon.equippingBlock && weapon.equippingBlock.ammoType === 1) { %>
+          <% if (weapon.ammoType === 1) { %>
             Primary
-          <% } else if (weapon.equippingBlock && weapon.equippingBlock.ammoType === 2) { %>
+          <% } else if (weapon.ammoType === 2) { %>
             Special
-          <% } else if (weapon.equippingBlock && weapon.equippingBlock.ammoType === 3) { %>
+          <% } else if (weapon.ammoType === 3) { %>
             Heavy
           <% } else { %>
             Unknown
@@ -63,8 +63,8 @@
         <h3>Lore Subtitle: <%= loreSubtitle %></h3>
         <p><%= loreDescription %></p>
         <div class="mt-4">
-          <button class="btn btn-warning" onclick="addToFavorites('<%= weapon.displayProperties.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.displayProperties.icon %>', '<%= weapon.itemTypeDisplayName %>', '<%= weapon.equippingBlock.ammoType %>')">Add to Favorites</button>
-          <button class="btn btn-success" onclick="addToLoadouts('<%= weapon.displayProperties.name %>')">Add to Loadouts</button>
+          <button class="btn btn-warning" onclick="addToFavorites('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Add to Favorites</button>
+          <button class="btn btn-success" onclick="addToLoadouts('<%= weapon.name %>')">Add to Loadouts</button>
         </div>
       </div>
     </div>
