--- a/views/weapon.ejs
+++ b/views/weapon.ejs
@@ -64,7 +64,7 @@
         <p><%= loreDescription %></p>
         <div class="mt-4">
           <button class="btn btn-warning" onclick="addToFavorites('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Add to Favorites</button>
-          <button class="btn btn-success" onclick="addToLoadouts('<%= weapon.name %>')">Add to Loadouts</button>
+          <button class="btn btn-success" onclick="addToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Add to Loadout</button>
         </div>
       </div>
     </div>
