--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -4,48 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Favorite Weapons</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">WeaponApp</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/favorites">Favorites</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/loadouts">Loadouts</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/auth/logout">Logout</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Home</a>
+    <a class="navbar-brand" href="/loadouts">Loadouts</a>
+    <a class="navbar-brand" href="/favorites">Favorites</a>
+    <a class="navbar-brand ml-auto" href="/logout">Logout</a>
   </nav>
-  
   <div class="container mt-4">
-    <div class="row" id="favorites-container">
-      <% favoritesArr.forEach((weapon, index) => { %>
-        <div class="col-md-3 mb-4 weapon-card position-relative">
+    <h1 class="text-white">Favorite Weapons</h1>
+    <div class="row">
+      <% weaponsArr.forEach((weapon, index) => { %>
+        <div class="col-md-3 mb-4 weapon-card" style="display: none;">
           <div class="card h-100">
-            <% if (weapon.icon) { %>
-              <img src="https://www.bungie.net<%= weapon.icon %>" class="card-img-top weapon-icon" alt="<%= weapon.name %>">
-            <% } %>
+            <img src="<%= weapon.icon %>" class="weapon-icon card-img-top" alt="<%= weapon.name %>">
             <div class="card-body">
-              <h4 class="card-title weapon-name"><%= weapon.name %></h4>
-              <h5 class="card-title">Weapon Type: <%= weapon.weaponType %></h5>
+              <h4 class="card-title"><%= weapon.name %></h4>
+              <h5 class="card-subtitle mb-2"><%= weapon.weaponType %></h5>
               <p class="card-text">Ammo: 
                 <% if (weapon.ammoType === 1) { %>
                   Primary
@@ -53,10 +31,13 @@
                   Special
                 <% } else if (weapon.ammoType === 3) { %>
                   Heavy
-                <% } else { %>
-                  Unknown
                 <% } %>
               </p>
+              <div class="card-buttons">
+                <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
+                <button class="btn btn-sm btn-warning" onclick="addToFavorites('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Favorites</button>
+                <button class="btn btn-sm btn-success" onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
+              </div>
             </div>
           </div>
         </div>
@@ -67,7 +48,7 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/scripts/script.js"></script>
 </body>
 </html>
