--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -20,10 +20,10 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/favorites">Favorites</a>
+            <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/loadouts">Loadouts</a>
+            <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
@@ -51,7 +51,7 @@
             <div class="card-buttons">
               <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
               <button class="btn btn-sm btn-warning" onclick="addToFavorites('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Favorites</button>
-              <button class="btn btn-sm btn-success" onclick="addToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
+              <button class="btn btn-sm btn-success" onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
             </div>
             <% if (weapon.icon) { %>
               <img src="https://www.bungie.net<%= weapon.icon %>" class="card-img-top weapon-icon" alt="<%= weapon.name %>">
