--- a/views/loadouts.ejs
+++ b/views/loadouts.ejs
@@ -9,9 +9,15 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Home</a>
-    <a class="navbar-brand" href="/loadouts">Loadouts</a>
-    <a class="navbar-brand" href="/favorites">Favorites</a>
+    <a class="navbar-brand" href="/api/destiny">Home</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
+      </li>
+    </ul>
     <a class="navbar-brand ml-auto" href="/logout">Logout</a>
   </nav>
   <div class="container mt-4">
@@ -37,6 +43,7 @@
                 <img src="<%= loadout.gear.heavy.icon %>" class="weapon-icon" alt="<%= loadout.gear.heavy.name %>">
                 <%= loadout.gear.heavy.name %>
               </div>
+              <button class="btn btn-sm btn-danger" onclick="removeLoadout('<%= loadout._id %>')">Delete</button>
             </div>
           </div>
         </div>
