--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -8,25 +8,39 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/api/destiny">Home</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
-      </li>
-    </ul>
-    <a class="navbar-brand ml-auto" href="/logout">Logout</a>
-  </nav>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">WeaponApp</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
   <div class="container mt-4">
     <h1 class="text-white">Favorite Weapons</h1>
     <div class="row">
       <% weaponsArr.forEach((weapon, index) => { %>
         <div class="col-md-3 mb-4 weapon-card">
           <div class="card h-100">
-            <img src="<%= weapon.icon %>" class="weapon-icon card-img-top" alt="<%= weapon.name %>">
+            <img src="https://www.bungie.net<%= weapon.icon %>" class="weapon-icon card-img-top" alt="<%= weapon.name %>">
             <div class="card-body">
               <h4 class="card-title"><%= weapon.name %></h4>
               <h5 class="card-subtitle mb-2"><%= weapon.weaponType %></h5>
