--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -8,32 +8,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">WeaponApp</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <% include partials/navbar %>
   <div class="container mt-4">
     <h1 class="text-white">Favorite Weapons</h1>
     <div class="row">
@@ -56,7 +31,7 @@
               <div class="card-buttons">
                 <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
                 <button class="btn btn-sm btn-warning" onclick="removeFromFavorites('<%= weapon._id %>')">Remove</button>
-                <button class="btn btn-sm btn-success" onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
+                <button class="btn btn-sm btn-success" onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', 'https://www.bungie.net<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
               </div>
             </div>
           </div>
