--- a/views/weapon.ejs
+++ b/views/weapon.ejs
@@ -8,33 +8,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="weapon-detail-page">
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">WeaponApp</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/auth/logout">Logout</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  
+  <% include partials/navbar %>
   <div class="container mt-4">
     <div class="row">
       <div class="col-md-4">
