--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,49 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Favorite Weapons</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-  <% include partials/navbar %>
-  <div class="container mt-4">
-    <h1 class="text-white">Favorite Weapons</h1>
-    <div class="row">
-      <% weaponsArr.forEach((weapon, index) => { %>
-        <div class="col-md-3 mb-4 weapon-card">
-          <div class="card h-100">
-            <img src="https://www.bungie.net<%= weapon.icon %>" class="weapon-icon card-img-top" alt="<%= weapon.name %>">
-            <div class="card-body">
-              <h4 class="card-title"><%= weapon.name %></h4>
-              <h5 class="card-subtitle mb-2"><%= weapon.weaponType %></h5>
-              <p class="card-text">Ammo: 
-                <% if (weapon.ammoType === 1) { %>
-                  Primary
-                <% } else if (weapon.ammoType === 2) { %>
-                  Special
-                <% } else if (weapon.ammoType === 3) { %>
-                  Heavy
-                <% } %>
-              </p>
-              <div class="card-buttons">
-                <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
-                <button class="btn btn-sm btn-warning" onclick="removeFromFavorites('<%= weapon._id %>')">Remove</button>
-                <button class="btn btn-sm btn-success" onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', 'https://www.bungie.net<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <% if ((index + 1) % 4 === 0) { %>
-          </div><div class="row">
-        <% } %>
-      <% }); %>
-    </div>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/scripts/script.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favorite Weapons</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">WeaponApp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/destiny">Home</a>
+                    </li>
+                    <% if (currentUser) { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
+                        </li>
+                        <% } %>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <% if (!currentUser) { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/auth/signup">Sign Up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/auth/login">Sign In</a>
+                        </li>
+                        <% } else { %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/auth/logout">Logout</a>
+                            </li>
+                            <% } %>
+                </ul>
+            </div>
+        </div>
+    </nav>
+        <div class="container mt-4">
+            <h1 class="text-white">Favorite Weapons</h1>
+            <div class="row">
+                <% weaponsArr.forEach((weapon, index)=> { %>
+                    <div class="col-md-3 mb-4 weapon-card">
+                        <div class="card h-100">
+                            <img src="https://www.bungie.net<%= weapon.icon %>" class="weapon-icon card-img-top"
+                                alt="<%= weapon.name %>">
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <%= weapon.name %>
+                                </h4>
+                                <h5 class="card-subtitle mb-2">
+                                    <%= weapon.weaponType %>
+                                </h5>
+                                <p class="card-text">Ammo:
+                                    <% if (weapon.ammoType===1) { %>
+                                        Primary
+                                        <% } else if (weapon.ammoType===2) { %>
+                                            Special
+                                            <% } else if (weapon.ammoType===3) { %>
+                                                Heavy
+                                                <% } %>
+                                </p>
+                                <div class="card-buttons">
+                                    <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
+                                    <button class="btn btn-sm btn-warning"
+                                        onclick="removeFromFavorites('<%= weapon._id %>')">Remove</button>
+                                    <button class="btn btn-sm btn-success"
+                                        onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', 'https://www.bungie.net<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <% if ((index + 1) % 4===0) { %>
+            </div>
+            <div class="row">
+                <% } %>
+                    <% }); %>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/scripts/script.js"></script>
 </body>
+
 </html>
